--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.75"
 clap = { version = "4.4.11", features = ["derive"] }
+num = "0.4.1"
 regex = "1.10.2"
 reqwest = { version = "0.11.23", features = ["blocking"] }
 
