--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2021"
 anyhow = "1.0.75"
 clap = { version = "4.4.11", features = ["derive"] }
 num = "0.4.1"
+priority-queue = "1.3.2"
 regex = "1.10.2"
 reqwest = { version = "0.11.23", features = ["blocking"] }
 
