--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+bevy_math = "0.12.1"
 clap = { version = "4.4.11", features = ["derive"] }
 num = "0.4.1"
 priority-queue = "1.3.2"
