--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,6 @@ num = "0.4.1"
 priority-queue = "1.3.2"
 regex = "1.10.2"
 reqwest = { version = "0.11.23", features = ["blocking"] }
+variadics_please = "1.1.0"
 
 
