--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ edition = "2024"
 anyhow = "1.0.75"
 bevy_math = "0.12.1"
 clap = { version = "4.4.11", features = ["derive"] }
+good_lp = { version = "1.14.2", default-features = false, features = ["microlp"] }
+# nalgebra = "0.34.1"
 num = "0.4.1"
 priority-queue = "1.3.2"
 regex = "1.10.2"
